--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,18 @@
           <artifactId>jackson-databind</artifactId>
           <version>2.16.0-rc1</version>
       </dependency>
+      <dependency>
+          <groupId>io.github.cdimascio</groupId>
+          <artifactId>java-dotenv</artifactId>
+          <version>5.2.2</version>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+      <dependency>
+          <groupId>com.mysql</groupId>
+          <artifactId>mysql-connector-j</artifactId>
+          <version>8.2.0</version>
+      </dependency>
+
   </dependencies>
 
   <build>
